--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     content="Official website of ATS Electrical Engineers. Professional electrical wiring, maintenance, and smart home solutions. Trusted electricians for residential and industrial projects.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Oswald:wght@400;600;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -23,7 +22,6 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact" class="btn-primary">Get a Quote</a></li>
         </ul>
       </nav>
@@ -106,30 +104,6 @@
       </div>
     </section>
 
-    <section id="projects">
-      <div class="container">
-        <div class="section-header">
-          <h2>Featured <span>Projects</span></h2>
-          <div class="underline"></div>
-        </div>
-        <div class="projects-grid">
-          <div class="project-item">
-            <img src="/images/industrial_electrical.webp" alt="Industrial Project">
-            <div class="project-info">
-              <h4>Metro Industrial Hub</h4>
-              <p>Full-scale electrical architecture</p>
-            </div>
-          </div>
-          <div class="project-item">
-            <img src="/images/smart_home_control.webp" alt="Residential Project">
-            <div class="project-info">
-              <h4>The Glass Villa</h4>
-              <p>Smart home & automated lighting</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section id="contact">
       <div class="container">
@@ -140,15 +114,15 @@
             <div class="contact-details">
               <div class="detail-item">
                 <span class="icon">📍</span>
-                <p>123 Power Lane, Electric City, EC 456</p>
+                <p>MUTHALAKKODOM ROAD MANGATTUKAVALA</p>
               </div>
               <div class="detail-item">
                 <span class="icon">📞</span>
-                <p>+1 (555) 123-4567</p>
+                <p>9995911991, 8138886111, 8075088299</p>
               </div>
               <div class="detail-item">
                 <span class="icon">✉️</span>
-                <p>hello@voltmaster.com</p>
+                <p>atselectricals9995@gmail.com</p>
               </div>
             </div>
           </div>
@@ -181,10 +155,13 @@
     <div class="container">
       <div class="footer-bottom">
         <p>&copy; 2025 ATS Electrical Engineers. All rights reserved.</p>
+        <div class="footer-contact">
+          <p>MUTHALAKKODOM ROAD MANGATTUKAVALA</p>
+          <p>9995911991, 8138886111, 8075088299</p>
+          <p>atselectricals9995@gmail.com</p>
+        </div>
         <div class="social-links">
-          <a href="#">LinkedIn</a>
-          <a href="#">Instagram</a>
-          <a href="#">Twitter</a>
+          <!-- Social links removed as requested -->
         </div>
       </div>
     </div>
