contact form done

--- a/index.html
+++ b/index.html
@@ -109,42 +109,29 @@
       <div class="container">
         <div class="contact-card">
           <div class="contact-info">
-            <h2>Let's <span>Connect</span></h2>
-            <p>Ready to start your next project? Get in touch with us today for a detailed consultation.</p>
-            <div class="contact-details">
-              <div class="detail-item">
-                <span class="icon">📍</span>
-                <p>MUTHALAKKODOM ROAD MANGATTUKAVALA</p>
-              </div>
-              <div class="detail-item">
-                <span class="icon">📞</span>
-                <p>9995911991, 8138886111, 8075088299</p>
-              </div>
-              <div class="detail-item">
-                <span class="icon">✉️</span>
-                <p>atselectricals9995@gmail.com</p>
-              </div>
-            </div>
+            <h2>Contact <span>Us</span></h2>
           </div>
           <form class="contact-form">
-            <div class="form-group">
-              <input type="text" placeholder="Your Name" required>
+            <div class="form-group grid-2">
+              <input type="text" placeholder="First Name*" required>
+              <input type="text" placeholder="Last Name*" required>
             </div>
             <div class="form-group">
-              <input type="email" placeholder="Email Address" required>
+              <input type="text" placeholder="Company name*">
             </div>
             <div class="form-group">
-              <select>
-                <option selected disabled>Service Interested In</option>
-                <option>Residential</option>
-                <option>Industrial</option>
-                <option>Smart Home</option>
-              </select>
+              <input type="text" placeholder="Position*">
             </div>
             <div class="form-group">
-              <textarea placeholder="Tell us about your project" rows="4"></textarea>
+              <input type="email" placeholder="Email*" required>
             </div>
-            <button type="submit" class="btn-primary">Send Message</button>
+            <div class="form-group">
+              <input type="tel" placeholder="Phone">
+            </div>
+            <div class="form-group">
+              <textarea placeholder="Message" rows="2"></textarea>
+            </div>
+            <button type="submit"><span>●</span> SUBMIT</button>
           </form>
         </div>
       </div>
