--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
           </div>
         </div>
       </div>
+      <div class="hero-marquee">
+        <div class="marquee-content">
+          <span>ATS ELECTRICAL ENGINEERS • PREMIUM SOLUTIONS • ESTABLISHED 2010 • RESIDENTIAL • INDUSTRIAL • SMART HOMES
+            •&nbsp;</span>
+          <span>ATS ELECTRICAL ENGINEERS • PREMIUM SOLUTIONS • ESTABLISHED 2010 • RESIDENTIAL • INDUSTRIAL • SMART HOMES
+            •&nbsp;</span>
+          <span>ATS ELECTRICAL ENGINEERS • PREMIUM SOLUTIONS • ESTABLISHED 2010 • RESIDENTIAL • INDUSTRIAL • SMART HOMES
+            •&nbsp;</span>
+          <span>ATS ELECTRICAL ENGINEERS • PREMIUM SOLUTIONS • ESTABLISHED 2010 • RESIDENTIAL • INDUSTRIAL • SMART HOMES
+            •&nbsp;</span>
+        </div>
+      </div>
     </section>
 
     <section id="services">
