--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     content="Official website of ATS Electrical Engineers. Professional electrical wiring, maintenance, and smart home solutions. Trusted electricians for residential and industrial projects.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700&family=Saira:wght@400;500;600;700&family=Jost:wght@100..900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 <body>
@@ -153,6 +155,14 @@
       </div>
     </div>
   </footer>
+
+  <div class="whatsapp-sidebar">
+    <div class="whatsapp-pocket">
+      <a href="https://wa.me/your-number-here" target="_blank" class="whatsapp-icon">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+    </div>
+  </div>
 
   <script type="module" src="/src/main.js"></script>
 </body>
