--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header id="navbar">
     <div class="container">
-      <a href="#" class="logo">ATS<span>ENGINEERS</span></a>
+      <a href="#" class="logo">ATS<span>ELECTRICALS</span></a>
       <nav>
         <ul>
           <li><a href="#hero">Home</a></li>
