menu minor change

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="container">
       <a href="#" class="logo">ATS<span>ELECTRICALS</span></a>
       <nav>
+        <button class="menu-close" aria-label="Close menu">&times;</button>
         <ul>
           <li><a href="#hero">Home</a></li>
           <li><a href="#services">Services</a></li>
