--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <body>
   <header id="navbar">
     <div class="container">
-      <a href="#" class="logo">ATS<span>ELECTRICALS</span></a>
+      <a href="#" class="logo">
+        <img src="/images/logo.jpg" alt="ATS Logo" class="logo-icon">
+        ATS<span> ELECTRICAL ENGINEERS</span>
+      </a>
       <nav>
         <button class="menu-close" aria-label="Close menu">&times;</button>
         <ul>
