--- a/index.html
+++ b/index.html
@@ -63,24 +63,40 @@
         </div>
         <div class="services-grid">
           <div class="service-card">
-            <div class="service-icon">⚡</div>
+            <div class="service-icon-wrapper">
+              <div class="service-icon">⚡</div>
+            </div>
             <h3>Residential Wiring</h3>
             <p>Complete home wiring solutions with a focus on safety and modern aesthetics.</p>
           </div>
           <div class="service-card">
-            <div class="service-icon">🏗️</div>
+            <div class="service-icon-wrapper">
+              <div class="service-icon">🏗️</div>
+            </div>
             <h3>Industrial Systems</h3>
             <p>Heavy-duty electrical installations and maintenance for large-scale facilities.</p>
           </div>
           <div class="service-card">
-            <div class="service-icon">🏠</div>
-            <h3>Smart Home</h3>
-            <p>Cutting-edge automation and integration for a truly connected living experience.</p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">🔋</div>
+            <div class="service-icon-wrapper">
+              <div class="service-icon">🔋</div>
+            </div>
             <h3>Emergency Repair</h3>
             <p>24/7 dedicated support for all your critical electrical emergencies.</p>
+          </div>
+          <div class="service-card">
+            <div class="service-icon-wrapper">
+              <div class="service-icon">☀️</div>
+            </div>
+            <h3>Solar Power Systems</h3>
+            <p>On-Grid and Off-Grid solar solutions, advanced inverters, and battery storage systems.</p>
+          </div>
+          <div class="service-card">
+            <div class="service-icon-wrapper">
+              <div class="service-icon">🌱</div>
+            </div>
+            <h3>Green Energy Tech</h3>
+            <p>Solar Green Energy Technologists and Eco-Friendly renewable energy developers for a sustainable future.
+            </p>
           </div>
         </div>
       </div>
@@ -147,6 +163,10 @@
   <footer>
     <div class="container">
       <div class="footer-bottom">
+        <div class="footer-logo-accent">
+          <img src="/images/logo.jpg" alt="ATS Logo" class="logo-icon"
+            style="height: 60px; width: 60px; margin-bottom: 1rem; border: none;">
+        </div>
         <p>&copy; 2025 ATS Electrical Engineers. All rights reserved.</p>
         <div class="footer-contact">
           <p>MUTHALAKKODOM ROAD MANGATTUKAVALA</p>
