--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact" class="btn-primary">Get a Quote</a></li>
         </ul>
       </nav>
@@ -68,13 +69,6 @@
             </div>
             <h3>Residential Wiring</h3>
             <p>Complete home wiring solutions with a focus on safety and modern aesthetics.</p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon-wrapper">
-              <div class="service-icon">🏗️</div>
-            </div>
-            <h3>Industrial Systems</h3>
-            <p>Heavy-duty electrical installations and maintenance for large-scale facilities.</p>
           </div>
           <div class="service-card">
             <div class="service-icon-wrapper">
@@ -126,6 +120,17 @@
       </div>
     </section>
 
+    <section id="gallery">
+      <div class="container">
+        <div class="section-header">
+          <h2>Our <span>Work Gallery</span></h2>
+          <div class="underline"></div>
+        </div>
+        <div id="gallery-grid" class="gallery-grid">
+          <!-- Dynamic items from gallery.js -->
+        </div>
+      </div>
+    </section>
 
     <section id="contact">
       <div class="container">
